--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "license": "ISC",
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
+  },
+  "dependencies": {
+    "css-loader": "^3.3.0",
+    "style-loader": "^1.0.1"
   }
 }
