--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "css-loader": "^3.3.0",
     "style-loader": "^1.0.1"
   }
